<resources>
    <string name="app_name">fifthapp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_call_txt">call 12345678</string>
    <string name="base_url">http://www.china.com</string>
    <string name="btn_map_txt">open map</string>
    <string name="btn_browser_txt">Open Browser</string>
    <string name="btn_send_email_txt">Send Email</string>
    <string name="btn_create_calendar_txt">Create Calendar</string>
    <string name="btn_safe_open_map_txt">Safe_Open_Map</string>
    <string name="btn_share_txt">Share</string>
</resources>
