<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_call_txt"
        android:id="@+id/btn_call"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:onClick="onClickBtn_Call" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_map_txt"
        android:id="@+id/btn_viewMap"
        android:onClick="onClickBtn_ViewMap"
        android:layout_below="@+id/btn_call"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_browser_txt"
        android:id="@+id/btn_openBrowser"
        android:onClick="onClickBtn_OpenBrowser"
        android:layout_below="@+id/btn_viewMap"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_email_txt"
        android:id="@+id/btn_send_email"
        android:onClick="onClickBtn_SendEmail"
        android:layout_below="@+id/btn_openBrowser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_calendar_txt"
        android:id="@+id/btn_create_calendar"
        android:onClick="onClickBtn_Create_Calendar"
        android:layout_below="@+id/btn_send_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_safe_open_map_txt"
        android:id="@+id/btn_safe_open_map"
        android:onClick="onClickBtn_Safe_Open_Map"
        android:layout_below="@+id/btn_create_calendar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_share_txt"
        android:id="@+id/btn_share"
        android:layout_below="@+id/btn_safe_open_map"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:onClick="onClickBtn_Share" />

</RelativeLayout>
